[package]
edition = "2021"
name = "config"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "1.13.0"
toml = "0.5.9"
merge = "0.1.0"
smart-default = "0.6.0"
derive_more = "0.99.17"
serde_yaml = "0.8.24"
walkdir = "2.3.2"
sha2 = "0.10.2"
rmp-serde = "1.1.0"

[dependencies.mlua]
git = "https://github.com/ModProg/mlua/"
branch = "derive-from_lua"
features = ["luajit", "vendored", "module", "macros", "send", "async"]

[dependencies.nvim]
# git = "https://github.com/ModProg/nvim-rust"
path = "../nvim-rust"
