[package]
edition = "2021"
name = "config"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "1.13.0"
toml = "0.5.9"
merge = "0.1.0"
smart-default = "0.6.0"
derive_more = "0.99.17"
serde_yaml = "0.8.24"
walkdir = "2.3.2"
sha2 = "0.10.2"
rmp-serde = "1.1.0"
itertools = "0.10.3"
# nvim-oxi = { version = "0.2.2", features = ["test"] }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi/", features = ["test"] }

[features]
default = ["0.8"]
nightly = ["nvim-oxi/neovim-nightly"]
"0.7" = ["nvim-oxi/neovim-0-7"]
"0.8" = ["nvim-oxi/neovim-0-8"]
